# ExternalSolversApplication

./: CMakeLists.android.txt  CMakeLists.txt  CMakeLists.unix.txt  externalsolvers_application.cpp  externalsolvers_application.h
custom_external_libraries/ITSOL_2/: CMakeLists.txt
custom_external_libraries/SuperLU_4.3/: CMakeLists.android.txt  CMakeLists.txt
custom_external_libraries/SuperLU_4.3/CBLAS/: CMakeLists.txt  slu_Cnames.h
custom_external_libraries/SuperLU_4.3/CBLAS_android/: CMakeLists.txt
custom_external_libraries/SuperLU_4.3/EXAMPLE/: dfgmr.c
custom_external_libraries/SuperLU_4.3/SRC/: dcolumn_bmod.c  dgstrs.c  dpanel_bmod.c  dsnode_bmod.c  dsp_blas2.c  dutil.c  sp_ienv.c
custom_python/: add_linear_solvers_to_python.cpp  externalsolvers_python_application.cpp
external_includes/: amgcl_ns_solver.h  amgcl_solver.h  amgcl_solver_impl.cpp  gmres_solver.h  itsol_arms_solver.h  parallel_superlu_solver.h  pastix_solver.h  superlu_iterative_solver.h  superlu_solver.h
